# pranjul11garg.github.io

./: .nojekyll  Projects.html  Projects.qmd  README.md  _quarto.yml  about.html  about.qmd  brewery.html  brewery.qmd  index.html  index.qmd  nyc.html  projects.html  projects.qmd  pyproject.toml  requirments.txt  resume.html  resume.qmd  robots.txt  search.json  sitemap.xml  styles.css  vortex.html
.github/workflows/: publish.yml
_site/: Projects.html  about.html  index.html  projects.html  search.json
_site/site_libs/bootstrap/: bootstrap-76cf54f9538df5ef33282e316d97811f.min.css
images/: 25FEB_AD688.sql
site_libs/bootstrap/: bootstrap-9875b57354e09879a64f8a674c0be5a6.min.css  bootstrap-a4c1a7e6ada94f772f5a8b3fb2f253dc.min.css
