[project]
name = "pranjul11garg-github-io"
version = "0.0.1"
description = "Pranjul Garg Github initial website"
authors = [
    {name = "Pranjul Garg",email = "86375765+Prawnz11@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "pranjul11garg"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
